--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ author:
   bio              : "Eng.D candidate of Beihang University"
   location         : "Beijing, China"
   employer         :
-  pubmed           : ""
-  googlescholar    : ""
+  pubmed           : 
+  googlescholar    : 
   email            :
   researchgate     : "https://www.researchgate.net/profile/Xinliang-Guo"
   uri              :
