--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Guo Xinliang"
-  avatar           : "profile.png"
+  avatar           : "xlpic.jpg"
   bio              : "Eng.D candidate of Beihang University"
   location         : "Beijing, China"
   employer         :
