--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            :
+  email            : "16051068@buaa.edu.cn"
   researchgate     : "https://www.researchgate.net/profile/Xinliang-Guo"
   uri              :
   bitbucket        :
